added links to site footer

--- a/_data/linklists.yml
+++ b/_data/linklists.yml
@@ -15,3 +15,10 @@ main-menu:
 
     - title: "Contact us"
       url: "/pages/contact-us"
+footer:
+  links:
+    - title: "Search"
+      url: "/search"
+      
+    - title: "About us"
+      url: "/pages/about-us"
