adding blog related pages

--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -1,8 +1,10 @@
----
-layout: post
-permalink: "/blogs/news/:title"
----
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non laoreet dui. Morbi lacus massa, euismod ut turpis molestie, tristique sodales est. Integer sit amet mi id sapien tempor molestie in nec massa.
+title: "News"
+articles:
+  - title: "First Blog Post"
+    url: "/blogs/news/first-blog-post"
+    author: "John Doe"
+    published_at: "August 07, 2015"
+    content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non laoreet dui. Morbi lacus massa, euismod ut turpis molestie, tristique sodales est. Integer sit amet mi id sapien tempor molestie in nec massa.
 
 Fusce non ante sed lorem rutrum feugiat. Vestibulum pellentesque, purus ut dignissim consectetur, nulla erat ultrices purus, ut consequat sem elit non sem. Morbi lacus massa, euismod ut turpis molestie, tristique sodales est. Integer sit amet mi id sapien tempor molestie in nec massa. Fusce non ante sed lorem rutrum feugiat.
 
