added blog comments section and sample comments

--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -6,6 +6,10 @@ articles:
     tags: [news]
     author: "John Doe"
     published_at: "August 07, 2015"
+    comments:
+      - content: "testing blog comments"
+        author: "konna"
+        created_at: "Tue Apr 28 11:54:13 2015"
     content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non laoreet dui. Morbi lacus massa, euismod ut turpis molestie, tristique sodales est. Integer sit amet mi id sapien tempor molestie in nec massa.
 
 Fusce non ante sed lorem rutrum feugiat. Vestibulum pellentesque, purus ut dignissim consectetur, nulla erat ultrices purus, ut consequat sem elit non sem. Morbi lacus massa, euismod ut turpis molestie, tristique sodales est. Integer sit amet mi id sapien tempor molestie in nec massa. Fusce non ante sed lorem rutrum feugiat.
