fix label in links list

--- a/_data/linklists.yml
+++ b/_data/linklists.yml
@@ -2,20 +2,16 @@ main-menu:
   links:
     - title: "Home"
       url: "/"
-
     - title: "Catalog"
       url: "/collections/all"
       catalog:
         links:
-          - title: "test"
+          - title: "Test Collection"
             url: /collections/test
-
     - title: "Blog"
       url: "/blogs/news"
-
     - title: "About us"
       url: "/pages/about-us"
-
     - title: "Contact us"
       url: "/pages/contact-us"
 footer:
